--- a/index.css
+++ b/index.css
@@ -133,18 +133,20 @@ body {
 }
 
 .about-me-text h2 {
-  font-size: 30px;
-  color: #081308;
+  font-size: 60px;
+  font-weight: 30;
+  color: #0e0f0e;
   text-transform: uppercase;
   margin: 0;
+  text-decoration: underline;
+  text-align: center;
 }
 
 .about-me-text p {
-  font-size: 15px;
-  color: #021147;
+  font-size: 30px;
+  color: #0c0d10;
   margin: 10px 0;
-  text-shadow: 0 0 10px rgba(237, 14, 29, 0.7); /* Red glow */
-    font-family: 'Roboto', sans-serif; 
+  font-family: 'Roboto', sans-serif; 
 }
 
 /* CSS for footer */
